fix overflow

--- a/style.css
+++ b/style.css
@@ -1,380 +1,3 @@
-<<<<<<< HEAD
-* {-webkit-font-smoothing: antialiased;}
-
-html,body{
-    background-color: #00171e;
-    margin:0px;
-    padding:0px;
-    width:100%;
-    position:absolute;
-    overflow-x: hidden;
-   font-family: "Albert Sans", sans-serif;
-font-weight: 300;
-}
-
-h2{
-font-size: 1.5rem;
-color: #b5d9d9;
-margin-left: 40px;
-font-weight:500;
-}
-
-.hero{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-height:90vh;
-     margin-top:30px;
-     margin-left: 10%;
-
-   
-
-
-}
-
-
-.hero h1{
-    color: white;
-    font-size:2.5rem ;
-    margin-left: 20px;
-    font-weight: bolder;
-margin-bottom:0px;
-    
-
-}
-
-.hero h2{
-    color: white;
-    opacity: .7;
-    font-size:1.3rem;
-    margin-top:10px;
-    margin-bottom:50px;
-    margin-left:20px;
-    
-}
-
-.hero button{
-    position: relative;
-    width: 110px;
-    color: black;
-    font-weight:500;
-    background-color: #b5d9d9;
-    border: solid #4d5d5d 1px;
-    border-radius: 5px;
-    margin-left: 20px;
-    text-align: center;
-    font-size:.8rem;
-    padding: 5px;
-    z-index: 0;
-   
-    
-    
-}
-.hero button::after {
-position: absolute;
-content: "";
-width: 102%;
-height: 102%;
-top: -1%;
-left: -1%;
-background-color: #b5d9d9;
-filter: blur(8px);
-z-index: -1;
-
-}
-
-.name{
-    color: #b5d9d9 ;
-    font-size: 2.5rem;
-position:relative;
-}
-
-.about.me{
-width: 80%;
-margin: auto;
-padding: 2%;
-animation: fadeIn 3s ease 3s forwards;
-margin-bottom: 100px;
-background-color: #0a252d;
-border-radius: 20px;
-opacity: 0;
-}
-
-.portrait{
-    width: 95%;
-    display: flex;
-    gap: 10%;
-    margin-top: 30px;
-    margin-bottom: 30px
-    
-    
-}
-
-.portrait p{
-    width: 45%;
-    color: white;
-    margin-left: 10%;
-    text-align: left;
-}
-
-.portrait img{
-    border-radius: 30px;
-    width: 46%;
-    max-width: 200px;
-    border-bottom: 2px solid #90adad;
-    object-fit: cover;
-    
-    
-}
-.credentials {
-     
-width: 100%;
-height: 350px;
-margin-bottom:100px;
-
-
-
-
-}
-
-.cred {
-display: grid;
-width: 90%;
-margin-left:5%;
-padding: 10px;
-grid-template-columns: .3fr auto;
-grid-template-rows: auto auto;
-color: #e1efef;
-font-size: 1rem;
-margin-top:20px;
-
-
-}
-
-.credentials h2{
-    margin-left: 60%;
-    padding-top: 20px;
-
-}
-
-
-.cred h3{
-    color: #e1efef;
-}
-
-.cred ul{
-    color: #e1efef;
-}
-.work{
-width: 100%;
-}
-.projects{
-   padding: 20px;
-    margin:auto;
-    margin-bottom: 100px;
-    width: 70%;
-    height: 600px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr ;
-    grid-template-rows: 200px 200px;
-    gap: 10px;
-}
-
-.projects .tindog{
-grid-column-start: 3;
-grid-column-end: 5;
-}
-
-.projects .movers{
-grid-row-start: 2;
-grid-column: span 2;
-    
-}
-
-.projects .devs{
-grid-row-start: 2;
-grid-column-start: 3;
-grid-column: span 2;
-}
-
-.projects img{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    opacity: .8;
- 
-}
-
-
-
-
-
-
-
-.withme{
-    width: 100vw; 
-    text-align: center;
-    height: 150px;
-   
-}
-.email-container{width: fit-content;
-margin: auto;
-text-align: center;}
-
-.withme h2{
-    color: white;
-    margin-left: 0px;
-
-}
-.withme p{
-white-space: nowrap;
-    border-right: 2px solid white;
-overflow: hidden;
-animation: typewriter 15s ease infinite, border-blink 1s ease infinite;
-    color: white;
-}
-.withme a{
-    font-size: 1.1rem;
-    font-weight: bold;
-    color: #90adad;
-    
-    
-}
-
-
-
-
-@media (max-width: 650px){
-    .hero {
-        height:80vh;
-     width: 90%;
-     margin: auto;
-align-items: center;
-text-align: center;
-
-}
-   h1{
-font-size:1.4rem;
-}
-
-
-    h2{
-    font-size:1.4rem;
-        margin-left: 10%;
-        }
-    .hero h2{ 
-     font-size:1.2rem;
-}
-
-.hero button {
-margin: auto;
-margin-left: 0;
-}
-
-    .projects{
-        display:flex ; 
-        flex-direction: column;
-        justify-content: center;
-        width: 60%;
-        margin-top: 60px;
-       height: fit-content;
-       align-items: center;
-       padding: 0px;
-       gap: 15px;
-    }
-
-    .tindog, .movers, .devs {
-      height: 200px;
-      width:100%;
-    
-
-}
-
-    .credentials h2{
-        margin-left: 10%;
-    } 
-
-    .cred{
-     width: 85%;
-        font-size: .8rem;
-     margin-left:10%;
-
-    }
-.work h2{ 
-text-align: center;
-margin-left: 0;
-}
-    
-    .projects img {
-
-  width:100%;
-  height: 100%;
-object-fit:fill;
- border-radius : 10px;
-    }
-
-.about.me h2{
-margin-left: 0;
-text-align: center;
-}
-
-    
-    .portrait{
-         width: 95%;
-         margin: auto;
-         gap: 10px;
-        flex-direction: column;
-        align-items: center;
-    }
-    .portrait p{
-        margin-left: 0%;
-       width: 85%;
-       max-width: 75ch;
-       
-      
-    }
-    .portrait img{
-        margin-left: 0;
-        
-    }
-}
-
-
-
-
-.slide-in{
-animation: slideIn 2s ease;
-}
-
-
-@keyframes fadeIn{
-from {opacity: 0;}
-to {opacity: 1;}
-}
-@keyframes slideIn{
-  0%   {top: -400px; color:white;}
-
-  80%  {top: -20px;}
- 50%, 85%  {top: 0px;}
-  90%  {top: -10px; color:white;}
-  100% {top: 0px; color: #b5d9d9;}
-
-
-}
-
-@keyframes typewriter{
-0%, 90%, 100% { width: 0%;}
-
-30%, 60% { width: 100%;}
-
-
-}
-
- @keyframes border-blink{
-to {border-right: transparent;}
-
-}
-=======
 * {-webkit-font-smoothing: antialiased;}
 
 html,body{
@@ -925,4 +548,3 @@ to {border-right: transparent;}
 .hide , .show{
     transition: all 1.5s ease;
 }
->>>>>>> master
